<?xml version="1.0"?>
<package>
  <name>thormang3_ppc</name>
  <version>0.1.2</version>
  <description>ROS packages for the thormang3_ppc (meta package)</description>
  <license>BSD</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="hjsong@robotis.com">Jay Song</author>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC</url>
  <url type="website">http://wiki.ros.org/thormang3_ppc</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>thormang3_sensors</run_depend>
  <run_depend>thormang3_manipulation_demo</run_depend>
  <run_depend>thormang3_walking_demo</run_depend>
  <export><metapackage/></export>
</package>
