<?xml version="1.0"?>
<package>
  <name>thormang3_sensors</name>
  <version>0.0.2</version>
  <description>The thor_lidar package</description>

  <maintainer email="kmjung@robotis.com">kayman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
