<?xml version="1.0"?>
<package>
  <name>thormang3_sensors</name>
  <version>0.1.1</version>
  <description>
    Thormang3 sensor related package.
    This package contains sensor related launch files.
    The package also includes a node for assembling Laserscan(LaserScan to PointCloud)
  </description>

  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <license>BSD</license>
  <author email="kmjung@robotis.com">kayman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
