<?xml version="1.0"?>
<package>
  <name>thormang3_manipulation_demo</name>
  <version>0.1.0</version>
  <description>The thormang3_manipulation_demo package</description>
  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC</url>
  <url type="website">http://wiki.ros.org/thormang3_ppc</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>thormang3_manipulation_module_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
