<?xml version="1.0"?>
<package>
  <name>thormang3_walking_demo</name>
  <version>0.1.0</version>
  <description>
    The thormang3_walking_demo package
    This package describes how to use thormang3_walking_module.      
  </description>

  <maintainer email="hjsong@robotis.com">ROBOTIS</maintainer>

  <license>BSD</license>

  <author email="hjsong@robotis.com">ROBOTIS</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>thormang3_walking_module_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>